--- a/ComicsViewer.csproj
+++ b/ComicsViewer.csproj
@@ -43,9 +43,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
+    <Reference Include="Mono.Data.Sqlite" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -59,14 +61,18 @@
     <Compile Include="Controllers\FileBrowserController.cs" />
     <Compile Include="Events\PathChangedEventArgs.cs" />
     <Compile Include="Models\Comics.cs" />
+    <Compile Include="Models\ComicsSettings.cs" />
+    <Compile Include="Models\Database.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="Views\FileBrowserView.cs" />
+    <Compile Include="SqlMapper.cs" />
     <Compile Include="Views\TouchImageView.cs" />
     <Compile Include="Views\TouchImageViewState.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\profile.sql" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\Layout\FileBrowser.axml">
