--- a/Properties/AndroidManifest.xml
+++ b/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
   <uses-sdk android:targetSdkVersion="10" />
   <application android:label="ComicsViewer">
   </application>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
